# GoogleDriveVertexRAG

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: library-reference.md
src/drive_vertex_cli/: __init__.py  __main__.py  auth_setup.py  chunking.py  cli.py  client.py  config.py  drive_client.py  env_file.py  extractors.py  index_store.py  indexer.py  retrieval.py  vertex_client.py
tests/: test_auth_setup.py  test_chunking.py  test_cli.py  test_client.py  test_config.py  test_env_file.py  test_index_store.py  test_retrieval.py  test_sync_folder_picker.py
